# TMotorControl-API

./: README-KR.md  README.md  pyproject.toml
demo/: torque_control.py
demos/: demo_ergo_test.py  demo_position_control.py
src/: TMotorAPI.py
