[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TMotorAPI"
version = "0.1.0"
description = "High-level TMotor control API for TMotorCANControl with CubeMars T-Motor"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["TMotorCANControl>=1.2", "python-can>=4.6"]
authors = [{name = "KR70004526"}]

[tool.setuptools.packages.find]
where = ["src"]
